fix previous page feature and fix button on safari

--- a/src/assets/scss/pages/_scan-page.scss
+++ b/src/assets/scss/pages/_scan-page.scss
@@ -54,6 +54,9 @@
         &:focus::before {
           opacity: 0.24;
         }
+        &:active {
+          color: inherit;
+        }
       }
     }
     height: 100vh;
